# leaguepedia-scoreboard-parser

./: README.md  pyproject.toml  setup.py
leaguepedia_sb_parser/: bayes_parser.py  grid_parser.py  live_parser.py  parser.py  qq_parser.py
leaguepedia_sb_parser/components/: errors.py  fetch_game.py
tests/: test_config.py
