[tool.poetry]
name = "leaguepedia-scoreboard-parser"
version = "0.1.22"
description = ""
authors = ["RheingoldRiver"]
packages = [{include = "leaguepedia_sb_parser"}]

[tool.poetry.dependencies]
python = "^3.9"
lol-dto = {git = "https://github.com/Leaguepedia/lol_dto.git"}
lol-id-tools = {git = "https://github.com/Leaguepedia/lol_id_tools.git"}
mwrogue = "^0.1.5"
lol-qq-parser = {git = "https://github.com/Leaguepedia/lol_qq_parser.git"}
riot-transmute = {git = "https://github.com/Leaguepedia/riot_transmute"}
riotwatcher = "^3.2.3"
bayes_lol_client = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
