[tool.poetry]
name = "leaguepedia-scoreboard-parser"
version = "0.1.24"
description = ""
authors = ["RheingoldRiver"]
packages = [{include = "leaguepedia_sb_parser"}]

[tool.poetry.dependencies]
python = "^3.10"
lol-dto = {git = "https://github.com/Leaguepedia/lol_dto.git"}
lol-id-tools = {git = "https://github.com/Leaguepedia/lol_id_tools.git"}
mwrogue = {git = "https://github.com/Leaguepedia/mwrogue.git", branch = "leaguepedia_fixes"}
lol-qq-parser = {git = "https://github.com/Leaguepedia/lol_qq_parser.git"}
riot-transmute = {git = "https://github.com/Leaguepedia/riot_transmute"}
riotwatcher = "^3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
